# omnity-indexer

./: .env  .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  README.md  config.toml  docker-compose.yml  hasura_metadata.json  indexer.sql  log4rs.yaml  omnity.sql  omnity_indexer.http  test.http
api/: Cargo.toml
api/src/graphql/mutation/: note.rs
api/src/graphql/query/: note.rs
entity/: Cargo.toml
entity/src/: chain_meta.rs  lib.rs  notes.rs  prelude.rs  sea_orm_active_enums.rs  ticket.rs  token_meta.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20240507_055143_create_table.rs  m20240507_055143_one.rs  m20240606_000001_two.rs  m20240701_000001_two.rs  m20240723_000001_three.rs  m20240802_000001_three.rs  m20250111_000001_four.rs  main.rs
service/: Cargo.toml
service/src/: mutation.rs  query.rs
service/tests/: mock.rs  prepare.rs
src/: main.rs
sync/: Cargo.toml
sync/src/: db.rs  hub.rs  lib.rs  main.rs  tasks.rs  types.rs  utils.rs
sync/src/customs/: bitcoin.rs  doge.rs  mod.rs  sicp.rs  solana_custom.rs  tests.rs
sync/src/customs/graphql/: mod.rs  schema.json  sender.graphql  sender.rs  term_amount.graphql  terms_amount.rs
sync/src/entity/: bridge_fee_log.rs  chain_meta.rs  deleted_mint_ticket.rs  launch_pad.rs  launchpad.rs  mod.rs  pending_ticket.rs  prelude.rs  sea_orm_active_enums.rs  ticket.rs  token_ledger_id_on_chain.rs  token_meta.rs  token_on_chain.rs  token_volume.rs  token_volumn.rs
sync/src/graphql/mutation/: note.rs
sync/src/hub/: mod.rs  tests.rs
sync/src/routes/: cosmwasm.rs  evm.rs  icp.rs  mod.rs  solana.rs  sui.rs  tests.rs  ton.rs
sync/src/service/: dao.rs  mod.rs  mutation.rs  query.rs
sync/src/service/graphql/: mod.rs  sender.rs  term_amount.graphql  terms_amount.rs
sync/tests/: ic-ref.rs  integration.rs  test.sql  unit_tests.rs
sync/tests/apis/: omnity_indexer.http
sync/tests/custom/: bitcoin_test.rs  mod.rs
sync/tests/hub/: mod.rs
sync/tests/route/: icp_test.rs  mod.rs
sync/tests/sql/: test.sql
