[package]
name = "omnity-indexer"
authors = ["Boern <boern.x@gmail.com>"]
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [".", "sync", "api", "service", "entity", "migration"]

[dependencies]
omnity-indexer-sync = { path = "sync" }
