[workspace]
members = ["sync", "service", "entity", "migration"]
resolver = "2"
[workspace.package]
name = "omnity-indexer"
authors = ["Boern <boern.x@gmail.com>"]
version = "0.1.0"
edition = "2021"
publish = false


[profile.release]
# Add debug information to the release build (does NOT reduce the level of optimization!)
# Makes flamegraphs more readable.
# https://doc.rust-lang.org/cargo/reference/manifest.html#the-profile-sections
debug = true
lto = true
opt-level = 'z'
