[package]
name = "migration"
authors = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }


[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
dotenvy = "0.15.0"
async-std = { version = "1", features = ["attributes", "tokio1"] }

[dependencies.sea-orm-migration]
version = "0.12"
features = ["runtime-tokio-rustls", "sqlx-postgres"]
