[package]
name = "omnity-indexer-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entity = { path = "../entity" }
serde_json = "1.0"

[dependencies.sea-orm]
version = "0.12"                                                    # sea-orm version
features = ["debug-print", "runtime-tokio-rustls", "sqlx-postgres"]

[dev-dependencies]
tokio = { version = "1.20.0", features = ["macros", "rt"] }
uuid = { version = "1.7.0", features = ["v4"] }
serde_json = "1.0"
[features]
mock = ["sea-orm/mock"]

[[test]]
name = "mock"
required-features = ["mock"]
