[package]
name = "omnity-indexer-sync"
authors = ["Boern <boern.x@gmail.com>"]
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
omnity-indexer-service = { path = "../service" }
tokio = { version = "1.29", features = ["full"] }
axum = "0.6.18"
axum-macros = "0.3"
dotenvy = "0.15.7"
async-graphql-axum = "5.0.10"
entity = { path = "../entity" }
migration = { path = "../migration" }
