[package]
name = "omnity-indexer-sync"
authors = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }
default-run = "omnity_indexer_sync"
[lib]
name = "omnity_indexer_sync"
path = "src/lib.rs"
[[bin]]
name = "omnity_indexer_sync"
path = "src/main.rs"

[dependencies]
candid = "0.10.1"
ic-agent = "0.34.0"
ic-identity-hsm = "0.34.0"
ic-utils = { version = "0.34.0", features = ["raw"] }
ring = "0.17.7"
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.6"
tokio = { version = "1.29", features = ["full"] }
axum = "0.6.18"
axum-macros = "0.3"
dotenvy = "0.15.7"
async-graphql-axum = "5.0.10"
log = { version = "0.4", default-features = false }
log4rs = "1.0"
chrono = "0.4"
sea-orm = { version = "0.12", features = [
    "debug-print",
    "runtime-tokio-rustls",
    "sqlx-postgres",
] }

# migration = { path = "../migration" }
ciborium = "0.2.1"
thiserror = "1"
futures = "0.3"
ic-btc-interface = { git = "https://github.com/dfinity/bitcoin-canister", rev = "9b239d1d67253eb14a35be6061e3967d5ec9db9d" }
clap = { version = "4.5.4", features = ["derive","cargo"] }
config = "0.14"
rand = "0.7.3"
lazy_static = "1.4"
once_cell = "1.8.0"


[dev-dependencies]
serde_cbor = "0.11.2"
ic-certification = "2.2"
env_logger = "0.9"
log = "0.4"
